# checkvpn

./: .dockerignore  .env.example  .gitignore  Dockerfile  README.md  docker-compose.yml  pyproject.toml
app/: auth.py  db.py  main.py  models.py  netutils.py  parsers.py  services.py  tg_proxy_probe.py  vless_probe.py  vpn_probe.py
app/checkers/: __init__.py  amneziawg.py  base.py  tg_proxy.py  vless.py  wireguard.py
app/static/: styles.css
app/templates/: index.html  login.html
docs/plans/: 2026-07-07-checkvpn-implementation-plan.md
tests/: test_api.py  test_auth_service.py  test_checker_contract.py  test_models.py  test_parsers.py  test_scaffold.py  test_services.py  test_tcp_checkers.py  test_tg_proxy_probe.py  test_vless_probe.py  test_vpn_probe.py
