[project]
name = "checkvpn"
version = "0.1.0"
description = "Self-hosted VPN availability checker"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
  "fastapi>=0.116.0",
  "uvicorn[standard]>=0.35.0",
  "jinja2>=3.1.6",
  "sqlmodel>=0.0.24",
  "httpx>=0.28.1",
  "python-multipart>=0.0.20"
]

[dependency-groups]
dev = [
  "pytest>=8.4.1"
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["app"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["."]
